@@ -9,6 +9,7 @@ Merged from 2.2:
 Merged from 2.1:
  * InvalidateKeys should have a weak ref to key cache (CASSANDRA-11176)
  * COPY FROM on large datasets: fix progress report and debug performance (CASSANDRA-11053)
+ * Fix streaming_socket_timeout_in_ms not enforced (CASSANDRA-11286)
 
 3.0.4
  * Preserve order for preferred SSL cipher suites (CASSANDRA-11164)
